--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,9 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
-inputs:
-  myInput:              # change this
-    description: 'input description here'
-    default: 'default value if applicable'
+name: 'sox-emergency'
+description: 'When its a SOX emergency'
+author: 'Reverb LLC'
 runs:
   using: 'node12'
   main: 'dist/index.js'
+on:
+  pull_request:
+    types: [labeled]
