--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   "dependencies": {
     "@actions/core": "^1.2.0",
     "@actions/github": "^2.1.1",
-    "@octokit/webhooks": "^7.1.0"
+    "@octokit/webhooks": "^7.1.0",
+    "@types/request-promise-native": "^1.0.17",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.8"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
