--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,5 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+      with:
+        ref: ${{ env.GITHUB_REF }}
     - run: |
-        make setup lint test dist/index.js
+        git status
