--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,8 @@ jobs:
     - run: |
         touch change.txt
     - run: |
+        make clean dist/index.js
+    - run: |
         git add --all
     - run: |
         git status
