--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
     - run: |
         touch change.txt
     - run: |
-        make clean dist/index.js
+        make setup clean dist/index.js
     - run: |
         git add --all
     - run: |
