build should be dif

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     - run: |
         git status
     - run: |
-        touch change.txt
+        make setup clean dist/index.js
     - run: |
         rm dist/index.js
     - run: |
