--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@actions/core": "^1.2.0",
     "@actions/github": "^2.1.1",
     "@octokit/webhooks": "^7.1.0",
-    "@reverbdotcom/url-template": "^2.0.12",
     "@types/request-promise-native": "^1.0.17",
     "node-fetch": "^2.6.0",
     "request": "^2.88.2",
-    "request-promise-native": "^1.0.8"
+    "request-promise-native": "^1.0.8",
+    "url-template": "^2.0.8"
   },
   "devDependencies": {
     "@types/jest": "^25.2.0",
