--- a/action.yml
+++ b/action.yml
@@ -7,8 +7,8 @@ input:
     required: true
   verified_ci_label:
     description: The label to apply to PRs that have retroactively passed ci
-    required: false
-    default: verified-ci
+    required: true
+    default: 'verified-ci'
   skip_ci_label:
     description: The label for skipping CI
     required: false
