--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ input:
   verified_ci_label:
     description: The label to apply to PRs that have retroactively passed ci
     required: true
-    default: 'verified-ci'
+    default: verified-ci
   skip_ci_label:
     description: The label for skipping CI
     required: false
