--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,3 +20,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           relevant_labels: "console-access"
           required_checks: "ci/circleci: test,ci/circleci: lint"
+          numOctocats:
