--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,5 +11,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Handle event
-        uses: ./
+      - uses: reverbdotcom/breakglass@master
+        with:
+          slack_hook: ${{ secrets.SLACK_HOOK }}
+          skip_ci_label: the-label-that-triggers-ci-skip
+          skip_approval_label: the-label-that-triggers-approval-skip
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          relevant_labels: "console-access"
+          required_checks: "ci/circleci: test,ci/circleci: lint"
